--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^3.5.2",
     "mammoth": "^1.9.0",
     "markdown-it": "^14.1.0",
     "next": "15.1.5",
